--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
             # npm login
             npm install
             npm run start 
-            exit 1
+            # exit 1
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
