--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
+          name: Build back-end
           command: |
             # code here
             cd backend
@@ -41,8 +42,28 @@ jobs:
           paths: [backend/node_modules]
           key: backend-build
 
+  # -----test frontend----
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Run frontend test 
+          command: |
+            cd frontend
+            npm install
+            npm run test
+  # -----test backend-----
+  # test-backend:
+
 workflows:
   default:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires:
+            - "build-frontend"
