--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,6 @@ jobs:
             cd frontend
             npm install 
             npm run build
-            # exit 1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -34,10 +33,8 @@ jobs:
           command: |
             # code here
             cd backend
-            # npm login
             npm install
             npm run start 
-            # exit 1
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -57,7 +54,19 @@ jobs:
             npm install
             npm run test
   # -----test backend-----
-  # test-backend:
+  test-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Run backend test 
+          command: |
+            cd backend
+            npm install
+            npm run test
 
 workflows:
   default:
@@ -67,3 +76,6 @@ workflows:
       - test-frontend:
           requires:
             - "build-frontend"
+      - test-backend:
+          requires:
+            - "build-backend"
