update command install docker compose

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,18 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
+          name: Install Docker Compose
+          environment:
+            COMPOSE_VERSION: '1.29.2'
+          command: |
+            curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+      - run:
           name: docker compose setup postgres
           command: |
             cd util
-            sudo docker-compose -f docker-compose.yml up -d
+            docker-compose -f docker-compose.yml up -d
       - run:
           name: Build back-end
           command: |
