add docker primary image circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
   build-backend:
     docker:
       - image: circleci/node:13.8.0
+      - image: circleci/cci-demo-docker-primary:0.0.1
     steps:
       - checkout
       - restore_cache:
@@ -37,7 +38,6 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
             docker-compose --version
-            sudo chmod 666 /var/run/docker.sock
       - run:
           name: docker compose setup postgres
           command: |
