--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,9 @@ jobs:
           name: Build back-end
           command: |
             # code here
-            npm install pm2 -g
             cd backend
             npm install
-            pm2 --name HelloWorld start npm -- start
-            # npm run start& 
+            npm run start& 
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
