--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
           name: Build back-end
           command: |
             # code here
+            echo $TYPEORM_ENTITIES
             cd backend
             npm install
             npm run start& 
@@ -77,9 +78,9 @@ jobs:
             cd backend
             npm install
             npm run test
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+      # - slack/notify:
+      #     event: fail
+      #     template: basic_fail_1
 
   # -----scan-frontend-----
   scan-frontend:
