udpate variable envrionment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ commands:
             aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
             aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
             aws configure set aws_session_token $AWS_SESSION_TOKEN
-            aws configure set region $AWS_REGION
+            aws configure set region $AWS_DEFAULT_REGION
 
 jobs:
   # ----build frontend-----
