--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,6 +1,4 @@
----
-
-- name: "configuration play." 
+- name: configuration play
   hosts: web
   user: ubuntu
   become: true
@@ -13,18 +11,18 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    - name: "wait 600 seconds for target connection to become reachable/usable."
+    - name: wait 600 seconds for target connection to become reachable/usable
       wait_for_connection:
         delay: 5
         timeout: 600
 
-    - name: "Check for Python"
+    - name: Check for Python
       raw: test -e "{{ ansible_python_interpreter }}"
       changed_when: "{{ ansible_host_key_checking }}"
       failed_when: "{{ ansible_host_key_checking }}"
       register: check_python
 
-    - name: "install python for Ansible."
+    - name: install python for Ansible.
       raw: apt -y update && apt install -y python-minimal
       when: check_python.rc != 0
 
