--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ commands:
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws cloudformation delete-stack \
+              --stack-name "udapeople-cloudfront-${CIRCLE_WORKFLOW_ID:0:7}"
   aws_configure_credential:
     steps:
       - run:
@@ -173,7 +175,6 @@ jobs:
       - run:
           name: Get IPv4 Public of server backend
           command: |
-            sleep 30
             echo "[all]" > inventory.txt | aws ec2 describe-instances \
               --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query "Reservations[*].Instances[].PublicDnsName" \
@@ -204,6 +205,7 @@ jobs:
           name: Configure Infrastructure
           command: |
             cd .circleci/ansible
+            cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy_environment
 workflows:
