--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,10 +175,10 @@ jobs:
       - run:
           name: Get IPv4 Public of server backend
           command: |
-            echo "[web]" > inventory.txt | aws ec2 describe-instances \
+            echo "[web]" > .circleci/ansible/inventory.txt | aws ec2 describe-instances \
               --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query "Reservations[*].Instances[].PublicDnsName" \
-              --output text >> inventory.txt
+              --output text >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: .
           paths:
