--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,9 +1,6 @@
-- name: configuration play
+- name: "configuration play."
   hosts: web
   user: ubuntu
-  become: true
-  become_method: sudo
-  become_user: root  
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
