--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,29 +1,26 @@
-- name: "configuration play."
-  hosts: web
+- name: Setting up a web server
+  hosts: server
   user: ubuntu
-  gather_facts: false
+  become: true
+  become_method: sudo
+  become_user: root
   vars:
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-
   pre_tasks:
     - name: wait 600 seconds for target connection to become reachable/usable
       wait_for_connection:
         delay: 5
         timeout: 600
-
     - name: Check for Python
       raw: test -e "{{ ansible_python_interpreter }}"
       changed_when: "{{ ansible_host_key_checking }}"
       failed_when: "{{ ansible_host_key_checking }}"
       register: check_python
-
     - name: install python for Ansible.
       raw: apt -y update && apt install -y python-minimal
       when: check_python.rc != 0
-
-  # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
@@ -35,7 +32,5 @@
     - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
     - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
     - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
-    # Add more env vars here
-
   roles:
     configure-server
