--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-NODE_ENV=local
+NODE_ENV=production
 VERSION=1
 TYPEORM_CONNECTION=postgres
 TYPEORM_MIGRATIONS_DIR=./src/migrations
@@ -6,7 +6,7 @@ TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
 TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 # Use these values for the local PG database from the Docker Compose file
-TYPEORM_HOST=localhost
+TYPEORM_HOST=database-1.cyxaoexex67l.us-east-1.rds.amazonaws.com
 TYPEORM_PORT=5432
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=password
