--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,14 +228,14 @@ jobs:
       - checkout 
       - restore_cache:
           keys: [backend-build]
-    #  - run:
-    #       name: Create file .env for migration and deployment backend
-    #       command: |
-    #         echo "VERSION=1\nTYPEORM_CONNECTION=${TYPEORM_CONNECTION}\nTYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR}\nTYPEORM_ENTITIES=${TYPEORM_ENTITIES}\nTYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS}\nTYPEORM_HOST=${TYPEORM_HOST}\nTYPEORM_PORT=${TYPEORM_PORT}\nTYPEORM_USERNAME=${TYPEORM_USERNAME}\nTYPEORM_PASSWORD=${TYPEORM_PASSWORD}\nTYPEORM_DATABASE=${TYPEORM_DATABASE}" >> backend/.env
-      # - persist_to_workspace:
-      #     root: .
-      #     paths:
-      #       - backend/.env
+     - run:
+          name: Create file .env for migration and deployment backend
+          command: |
+            echo -e "VERSION=1\nTYPEORM_CONNECTION=${TYPEORM_CONNECTION}\nTYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR}\nTYPEORM_ENTITIES=${TYPEORM_ENTITIES}\nTYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS}\nTYPEORM_HOST=${TYPEORM_HOST}\nTYPEORM_PORT=${TYPEORM_PORT}\nTYPEORM_USERNAME=${TYPEORM_USERNAME}\nTYPEORM_PASSWORD=${TYPEORM_PASSWORD}\nTYPEORM_DATABASE=${TYPEORM_DATABASE}" >> backend/.env
+      - persist_to_workspace:
+          root: .
+          paths:
+            - backend/.env
       - run:
           name: run migration commnad 
           command: |
@@ -254,14 +254,19 @@ jobs:
       - checkout 
       - aws_cli_intsall
       - aws_configure_credential
-      - run:
-          name: isntall tar
-          command: | 
-            yum install -y tar gzip
+      # - run:
+      #     name: isntall tar
+      #     command: | 
+      #       sudo apt install -y tar
       - run:
           name: Get backend URL
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query "Reservations[*].Instances[].PublicIpAddress" --output text)
+            # export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag-value,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query "Reservations[*].Instances[].PublicIpAddress" --output text)
+            # export API_URL="http://${BACKEND_IP}:3030"
+            # echo "API_URL = ${API_URL}"
+            # echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            # cat frontend/.env
+            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag-value,Values=backend-9b71071" --query "Reservations[*].Instances[].PublicIpAddress" --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
@@ -273,7 +278,7 @@ jobs:
             npm install
             npm run build
             # tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws s3 cp dist s3://udapeople-9b71071 --recursive
 
   deploy-backend:
     docker: 
@@ -304,26 +309,27 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires:
-            - "build-frontend"
-      - test-backend:
-          requires:
-            - "build-backend"
-      - scan-frontend:
-          requires:
-            - "build-frontend"
-      - scan-backend:
-          requires:
-            - "build-backend"
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires:
-            - "configure-infrastructure"
-      - deploy-frontend:
-          requires: [run-migrations]
+      # - build-frontend
+      # - build-backend
+      # - test-frontend:
+      #     requires:
+      #       - "build-frontend"
+      # - test-backend:
+      #     requires:
+      #       - "build-backend"
+      # - scan-frontend:
+      #     requires:
+      #       - "build-frontend"
+      # - scan-backend:
+      #     requires:
+      #       - "build-backend"
+      # - deploy-infrastructure:
+      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires:
+      #       - "configure-infrastructure"
+      # - deploy-frontend:
+      #     requires: [run-migrations]
+      - deploy-frontend
