--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,9 +287,10 @@ jobs:
       # - attach_workspace:
       #     at: .
       - run: 
-          name: deploy bacnend
+          name: deploy backend
           command: |
             # echo "NODE_ENV=production" >> backend/.env
+            ls
             cd backend
             npm run build
             cd ..
