--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,6 +276,7 @@ jobs:
     docker: 
       - image: python:3.11-rc-alpine
     steps:
+      - checkout
       - add_ssh_keys:
           fingerprints:
             - "24:4e:39:7a:30:81:ed:c9:3b:a9:b8:0c:df:d3:1d:aa"
@@ -290,7 +291,6 @@ jobs:
           name: deploy backend
           command: |
             # echo "NODE_ENV=production" >> backend/.env
-            ls
             cd backend
             npm run build
             cd ..
