add npm in install independencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,7 +283,7 @@ jobs:
       - run: 
           name: Install independencies
           command: |
-            apk add --update ansible tar
+            apk add --update ansible tar npm
             apk add --no-cache aws-cli
       # - attach_workspace:
       #     at: .
