update install tar in ansible

--- a/.circleci/ansible/roles/deploy/tasks/main.yaml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yaml
@@ -1,4 +1,11 @@
-- name: "create directory"
+- name: install tar 
+  become: yes
+  apt:
+    name: tar
+    state: latest
+    update_cache: yes
+
+- name: create directory
   file: 
     path: ~/web
     state: directory
