--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,6 +229,8 @@ jobs:
       - checkout 
       - restore_cache:
           keys: [backend-build]
+      - aws_cli_intsall
+      - aws_configure_credential
       - run:
           name: Create file .env for migration and deployment backend
           command: |
@@ -247,6 +249,7 @@ jobs:
             then
               curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
             fi
+      - destroy_environment
   
   deploy-frontend:
     docker: 
@@ -271,6 +274,7 @@ jobs:
             npm run build
             # tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-{CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy_environment
 
   deploy-backend:
     docker: 
@@ -285,47 +289,49 @@ jobs:
           command: |
             apk add --update ansible tar npm
             apk add --no-cache aws-cli
-      # - attach_workspace:
-      #     at: .
+      - attach_workspace:
+          at: .
       - run: 
           name: deploy backend
           command: |
-            # echo "NODE_ENV=production" >> backend/.env
+            echo "NODE_ENV=production" >> backend/.env
             cd backend
             npm i
             npm run build
             cd ..
             tar -C backend -czvf artifact.tar.gz .
+            mkdir .circleci/ansible/roles/deploy/files
             cp -r artifact.tar.gz .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy_environment
     
 workflows:
   default:
     jobs:
-      # - build-frontend
-      # - build-backend
-      # - test-frontend:
-      #     requires:
-      #       - "build-frontend"
-      # - test-backend:
-      #     requires:
-      #       - "build-backend"
-      # - scan-frontend:
-      #     requires:
-      #       - "build-frontend"
-      # - scan-backend:
-      #     requires:
-      #       - "build-backend"
-      # - deploy-infrastructure:
-      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires:
-      #       - "configure-infrastructure"
-      # - deploy-frontend:
-      #     requires: [run-migrations]
-      # - deploy-frontend
-      - deploy-backend
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires:
+            - "build-frontend"
+      - test-backend:
+          requires:
+            - "build-backend"
+      - scan-frontend:
+          requires:
+            - "build-frontend"
+      - scan-backend:
+          requires:
+            - "build-backend"
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires:
+            - "configure-infrastructure"
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
