--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ jobs:
             # cp -r artifact.tar.gz .circleci/ansible/roles/deploy/files
             cd .circleci/ansible
             cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml -vvv
+            # ansible-playbook -i inventory.txt deploy-backend.yml -vvv
       - destroy_environment
     
 workflows:
