--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -292,19 +292,19 @@ jobs:
       - attach_workspace:
           at: .
       - run: 
-          name: deploy backend
+          name: build backend
           command: |
             echo "NODE_ENV=production" >> backend/.env
             cd backend
             npm i
             npm run build
-            cd ..
             tar -C backend -czvf artifact.tar.gz .
-            # mkdir .circleci/ansible/roles/deploy/files
-            # cp -r artifact.tar.gz .circleci/ansible/roles/deploy/files
+      - run: 
+          name: deploy backend with ansible
+          command: |
             cd .circleci/ansible
             cat inventory.txt
-            # ansible-playbook -i inventory.txt deploy-backend.yml -vvv
+            ansible-playbook -i inventory.txt deploy-backend.yml -vvv
       - destroy_environment
     
 workflows:
