remove destroy environment in smoke test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -359,7 +359,7 @@ jobs:
             else
               return 1
             fi
-      - destroy_environment
+      # - destroy_environment
       # - revert_migrations
     
 workflows:
