--- a/.circleci/ansible/roles/deploy/tasks/main.yaml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yaml
@@ -5,29 +5,28 @@
     state: latest
     update_cache: yes
 
-- name: create directory store web code
-  become: yes
-  file: 
-    path: ~/web
-    state: directory
-    mode: 0755
+# - name: create directory store web code
+#   become: yes
+#   file: 
+#     path: ~/web
+#     state: directory
+#     mode: 0755
 
 - name: copy artifact to web directory
   become: yes
   copy: 
     src: ~/project/artifact.tar.gz
-    dest: ~/web/artifact.tar.gz
+    dest: home/ubuntu/artifact.tar.gz
 
 - name: uncompress
   become: yes
   shell:
-    cd ~/web
+    cd home/ubuntu
     tar -vxf artifact.tar.gz
 
 - name: build and start node
   shell: |
-    sudo bash
-    cd ~/web
+    cd home/ubuntu
     npm install
-    # pm2 stop default
+    pm2 stop default
     pm2 start npm -- start
