--- a/.circleci/ansible/roles/deploy/tasks/main.yaml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yaml
@@ -5,28 +5,28 @@
     state: latest
     update_cache: yes
 
-# - name: create directory store web code
-#   become: yes
-#   file: 
-#     path: ~/web
-#     state: directory
-#     mode: 0755
+- name: create directory store web code
+  become: yes
+  file: 
+    path: /home/web
+    state: directory
+    mode: 0755
 
 - name: copy artifact to web directory
   become: yes
   copy: 
     src: ~/project/artifact.tar.gz
-    dest: home/ubuntu/artifact.tar.gz
+    dest: home/web/artifact.tar.gz
 
 - name: uncompress
   become: yes
   shell:
-    cd home/ubuntu
+    cd home/web
     tar -vxf artifact.tar.gz
 
 - name: build and start node
   shell: |
-    cd home/ubuntu
+    cd home/web
     npm install
     pm2 stop default
     pm2 start npm -- start
